fix: wrap into onload function

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-width: 1020px;
   margin: 0;
@@ -929,12 +933,14 @@ a {
   padding-right: 40px;
   padding-left: 40px;
   margin: auto;
-  min-width: 350px;
+  width: 350px;
   background-color: #f2f2f2;
   border-top: 6px solid #FBC65F;
-  max-width: 350px;
+  max-height: 500px;
   color: rgb(102, 109, 137);
   transform: scale(0);
+
+  overflow: auto;
 }
 
 .overlay.animated .messageInner {
